--- a/home.html
+++ b/home.html
@@ -15,14 +15,14 @@
     <div id="top">
       <div class="row">
 	<div class="col-2">
-	  <a href="home.html"><img id="logo" src="imgs/logo.png" style="height: 35%;"></img></a>
+	  <a href="index.html"><img id="logo" src="imgs/logo.png" style="height: 35%;"></img></a>
 	</div>
 	<div class="col-5">
 	</div>
 	<div class="col-5">
 	  <ul class="nav" id="navbar">
 	    <li class="nav-item">
-	      <a class="nav-link" href="home.html"><div class="nav-text">Home</div></a>
+	      <a class="nav-link" href="index.html"><div class="nav-text">Home</div></a>
 	    </li>
 	    <li class="nav-item">
 	      <a class="nav-link" href="projects.html"><div class="nav-text">Projects</div></a>
