--- a/join.html
+++ b/join.html
@@ -22,7 +22,7 @@
 	<div class="col-5">
 	  <ul class="nav" id="navbar">
 	    <li class="nav-item">
-	      <a class="nav-link" href="home.html"><div class="nav-text">Home</div></a>
+	      <a class="nav-link" href="index.html"><div class="nav-text">Home</div></a>
 	    </li>
 	    <li class="nav-item">
 	      <a class="nav-link" href="projects.html"><div class="nav-text">Projects</div></a>
