--- a/join.html
+++ b/join.html
@@ -15,7 +15,9 @@
     <div id="top">
       <div class="row">
 	<div class="col-2">
+	<a href="index.html">
 	  <img id="logo" src="imgs/logo.png" style="height: 35%;"></img>
+	</a>
 	</div>
 	<div class="col-5">
 	</div>
