--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <div id="top">
       <div class="row">
 	<div class="col-2">
-	  <img id="logo" src="imgs/logo.png" style="height: 35%;"></img>
+	  <a href="index.html"><img id="logo" src="imgs/logo.png" style="height: 35%;"></img></a>
 	</div>
 	<div class="col-5">
 	</div>
